# Monopoly

./: .clang-format  .gitignore  CMakeLists.txt  resources.qrc  run.sh
.github/prompts/: doc-updater.agent.md
.github/workflows/: build.yml
assets/: board_spaces.json
assets/reference_image/: rules.md
src/: const.h  main.cpp
src/core/: GameEngine.cpp  GameEngine.h  Player.cpp  Player.h  Space.cpp  Space.h
src/ui/: BoardUiUtils.cpp  BoardWidget.cpp  BoardWidget.h  MainWindow.cpp  MainWindow.h  PayRentDialog.cpp  PayRentDialog.h  PlayerInfoWidget.cpp  PlayerInfoWidget.h  PlayerTokenItem.cpp  SpaceItem.cpp  SpaceItem.h
src/ui/components/: ToastNotification.cpp  ToastNotification.h
src/ui/dialogs/: BuyPropertyDialog.cpp  BuyPropertyDialog.h  EndTurnDialog.cpp  EndTurnDialog.h  PayRentDialog.cpp
src/ui/items/: PlayerTokenItem.cpp  PlayerTokenItem.h  SpaceItem.cpp  SpaceItem.h
src/ui/logic/: GameLogicHandler.cpp  GameLogicHandler.h
src/ui/utils/: BoardUiUtils.h
src/ui/widgets/: BoardWidget.cpp  BoardWidget.h  PlayerInfoWidget.cpp  PlayerInfoWidget.h
src/ui/windows/: MainWindow.h
